--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li id="item-16">16</li>
       </ul>
       <img>
+      <img src="https://www.cleanwateraction.org/sites/default/files/styles/blog_front_480x333/public/images/features/Water_clear%20water.jpg?itok=mx9WxKI9" alt="">
 
     </div>
     <script src="./main.js"></script>
